--- a/src/main/resources/templates/front/swift/scrollEntityListViewModel.mustache
+++ b/src/main/resources/templates/front/swift/scrollEntityListViewModel.mustache
@@ -1,40 +1,38 @@
-import SwiftData
 import Foundation
+import SwiftData
 
 extension {{entity}}ListViewModel {
 
     func loadMore{{entity}}sIfNeeded(current item: {{entity}}) {
 
-    print("[loadMore{{entity}}sIfNeeded]")
-    guard let last = entities.last, last.id == item.id else { return }
-    loadMore{{entity}}s()
+        print("[loadMore{{entity}}sIfNeeded]")
+        guard let last = entities.last, last.id == item.id else { return }
+        loadMore{{entity}}s()
     }
-
-    func loadMore{{entity}}s() {
-        print("[loadMore{{entity}}s]")
+    private func loadMore{{entity}}s() {
         guard !isLoading else { return }
         isLoading = true
+        defer { isLoading = false }
 
-        let currentCount = entities.count
-        let pageSize = 5
-
+        let cond = "{{entity}}Status.delete".uppercased()
+        let predicate: Predicate<{{entity}}> = #Predicate { item in
+            item.user?.username == username && item.statusRaw != cond
+                && (currentAccountId == nil || item.account == currentAccountId)
+        }
         var descriptor = FetchDescriptor<{{entity}}>(
-        predicate: #Predicate {
-         $0.user?.username == username && $0.statusRaw != "DELETE"
-        },
-         sortBy: [SortDescriptor(\.updatedAt, order: .reverse)]
+            predicate: predicate,
+            sortBy: [SortDescriptor(\.updatedAt, order: .reverse)]
         )
-
-        descriptor.fetchOffset = currentCount
-        descriptor.fetchLimit = pageSize
+        descriptor.fetchOffset = entities.count
+        descriptor.fetchLimit = 5
 
         do {
-                let newItems = try modelContext.fetch(descriptor)
-                entities.append(contentsOf: newItems)
-            } catch {
-                 errorMessage = error.localizedDescription
+            let newItems = try modelContext.fetch(descriptor).filter { new in
+                !entities.contains { $0.id == new.id }
             }
-
-            isLoading = false
+            entities.append(contentsOf: newItems)
+        } catch {
+            errorMessage = mapError(error)
         }
+    }
 }
