--- a/src/main/resources/templates/front/swift/entityPickerView.mustache
+++ b/src/main/resources/templates/front/swift/entityPickerView.mustache
@@ -9,7 +9,11 @@ struct {{entity}}PickerView: View {
     @State private var showForm: Bool = false
 
     private var filteredEntities: [{{entity}}] {
-        viewModel.entities.filter { $0.type{{entity}} == selectedFilter }
+        viewModel.entities.filter {
+        $0.type{{entity}} == selectedFilter
+        &&  $0.deletedAt == nil
+        &&  $0.remoteId != nil
+         }
     }
 
     var body: some View {
