--- a/src/main/resources/templates/front/swift/model.mustache
+++ b/src/main/resources/templates/front/swift/model.mustache
@@ -11,8 +11,12 @@ enum {{entity}}Type: String, Codable, CaseIterable {
 final class {{entity}} {
     @Attribute(.unique) var id: String
     {{#fields}}
-    {{^isId}}var {{name}}: {{realType}}{{#nullable}}?{{/nullable}}{{/isId}}
-{{/fields}}
+        {{^isId}}var {{name}}: {{realType}}{{#nullable}}?{{/nullable}}{{/isId}}
+
+      {{#isManyToOne}}
+          var {{name}}LocalId: {{realType}}{{#nullable}}?{{/nullable}}
+      {{/isManyToOne}}
+    {{/fields}}
 
     var user: User?
     var statusRaw: String
@@ -30,16 +34,19 @@ final class {{entity}} {
 
     init(
         {{#fields}}
-    {{^isId}}{{name}}: {{realType}}{{#nullable}}? = nil{{/nullable}}{{^nullable}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}}{{/nullable}},
-        {{/isId}}{{/fields}}
-        type{{entity}}: {{entity}}Type = .type1,
-        order: Int = 0
-    ) {
-        self.id = UUID().uuidString
-        {{#fields}}
-    {{^isId}}self.{{name}} = {{name}}
-    {{/isId}}
-{{/fields}}
+            {{^isId}}{{name}}: {{realType}}{{#nullable}}? = nil{{/nullable}}{{^nullable}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}}{{/nullable}},
+                {{/isId}}{{/fields}}
+                type{{entity}}: {{entity}}Type = .type1,
+                order: Int = 0
+            ) {
+                self.id = UUID().uuidString
+                {{#fields}}
+            {{^isId}}self.{{name}} = {{name}}
+            {{/isId}}
+            {{#isManyToOne}}
+                self.{{name}}LocalId = {{name}}
+            {{/isManyToOne}}
+        {{/fields}}
         self.type{{entity}} = type{{entity}}
         self.order = order
         self.statusRaw = {{entity}}Status.create.rawValue
